# snake

./: .gitignore  Cargo.toml  LICENSE  README.md  build_mac.sh  build_nix.sh  build_win.sh  build_windows.sh
.github/workflows/: ci.yml
resources/: Info.plist  sprite.json
src/: food.rs  game.rs  main.rs  scene.rs  snake.rs  tile.rs
