[package]
name = "snake"
description = "snake game in rust"
version = "0.1.0"
resolver = "2"
authors = ["Abraham <cedenoabraham@gmail.com>"]
keywords = ["snake", "game"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.8.0"
rand = "0.8.5"
smart-default = "0.6.0"
getrandom = { version = "0.2", features = ["js"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
overflow-checks = true


[package.metadata.deb]
maintainer = "Abraham Cedeno <cedenoabraham@gmail.com>"
copyright = "2022, Abraham Cedeno <cedenoabraham@gmail.com>"
extended-description = """\
A simple subcommand for the Cargo package manager for \
building Debian packages from Rust projects."""
depends = "$auto"
section = "game"
priority = "optional"